--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Proyecto de la primera generacion del curso de disenio web online">
-	<title>Puls2014: Comunidad de zombies cheveres!</title>
-	<link rel="stylesheet" href="">
+	<meta name="description" content="Comunidad de Zombies Developers">
+	<title>ZombieNet: Comunidad de zombies cheveres!</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 	<header>
@@ -12,7 +13,7 @@
 			<img src="logo.png">
 		</figure>
 		<h1>
-			Puls2014: Cominidad de Zombies atractivos y sexys.
+			ZombieNet: Comunidad de Zombies cheveres.
 		</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg">
@@ -39,27 +40,27 @@
 					Titulo del articulo
 				</a>
 			</h2>
-			<p class="autor_item">
+			<div class="autor_item">
 				por <a href="#">Joana Zombie</a>
-			</p>
+			</div>
 			<div class="datos_item">
-				<a href="#" class="tag_item">pony</a>
+				<a href="#" class="tag_item">Pony</a>
 				<span class="fecha_item">
 					hace <strong>5</strong> min
-				</span>
-				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item"></a>				
+				</span>				
 			</div>
 			<div class="votacion">
-				<a href="#" class="up"></a>
+				<a href="#" class="up">U</a>
 				720
-				<a href="#" class="down"></a>
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
 			</div>
 		</article>
 	</section>
 	<footer>
 		<p>
-			<strong>Powered by PandaSpace</strong>
+			<strong>Powered by Eduast</strong>
 		</p>
 		<p>
 			Eduardo 2014
