--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="Comunidad de Zombies Developers">
-	<title>ZombieNet: Comunidad de zombies cheveres!</title>
+	<meta name="viewport" contest="width=device-width, minimun-scale=1, maximun-scale=1">
+	<title>ZombieCode</title>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
 </head>
@@ -13,7 +15,7 @@
 			<img src="logo.png">
 		</figure>
 		<h1>
-			ZombieNet: Comunidad de Zombies cheveres.
+			ZombieCode: Dev Zombies Comunity
 		</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg">
@@ -25,11 +27,19 @@
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">Javascript</a></li>
 			<li><a href="#">Django</a></li>
+			<li><a href="#">Go</a></li>
 			<li id="publicar_nav">
-				<a href="#">Publicar</a>
+				<a href="#" class="icon-lapiz">Publicar</a>
 			</li>
 		</ul>
 	</nav>
+	<aside>
+		<video width="320" height="240" autoplay controls>
+		  	<source src="lecturas.mp4" type="video/mp4">
+		  	<source src="lecturas.ogg" type="video/ogg">
+		  	<!-- Actualiza tu Browser. -->
+		</video>		
+	</aside>
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
@@ -50,11 +60,167 @@
 				</span>				
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-f-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg"> 
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Titulo del articulo
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Zombie</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">Pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>				
+			</div>
+			<div class="votacion">
+				<a href="#" class="up icon-f-arriba"></a>
+				720
+				<a href="#" class="down icon-f-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 	</section>
