--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</ul>
 	</nav>
 	<aside>
-		<video width="320" height="240" autoplay controls>
+		<video width="320" height="240" autoplay>
 		  	<source src="lecturas.mp4" type="video/mp4">
 		  	<source src="lecturas.ogg" type="video/ogg">
 		  	<!-- Actualiza tu Browser. -->
