--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	</form>
 	<aside>
 		<video width="320" height="240" controls>
-		  	<source src="lecturas.mp4" type="video/mp4">
-		  	<source src="lecturas.ogg" type="video/ogg">
+		  	<source src="zombideo.m4v" type="video/mp4">
+		  	<source src="zombideo.webm" type="video/ogg">
 		  	<!-- Actualiza tu Browser. -->
 		</video>		
 	</aside>
