videos format changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<aside>
 		<video width="320" height="240" controls>
 		  	<source src="zombideo.m4v" type="video/mp4">
-		  	<source src="zombideo.webm" type="video/ogg">
+		  	<source src="zombideo.ogg" type="video/ogg">
 		  	<!-- Actualiza tu Browser. -->
 		</video>		
 	</aside>
