--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<img src="logo.png">
 		</figure>
 		<h1>
-			ZombieCode: Dev Zombies Comunity
+			ZombieCode: Zombies Dev Comunity
 		</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg">
