--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="description" content="Comunidad de Zombies Developers">
 	<meta name="viewport" content="width=device-width, minimun-scale=1, maximun-scale=1">
 	<title>ZombieCode</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
 	<script src="prefixfree.js"></script>
@@ -54,7 +53,7 @@
 				<img src="imagen.jpg"> 
 			</figure>
 			<h2 class="titulo_item">
-				<a href="#">
+				<a href="#" target="blank">
 					Titulo del articulo
 				</a>
 			</h2>
@@ -240,7 +239,7 @@
 			Eduardo 2014
 		</p>
 	</footer>	
-	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>">
+	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="formulario.js"></script>
 </body>
 </html>
