implemetar mejoras al formulario

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="Comunidad de Zombies Developers">
 	<meta name="viewport" content="width=device-width, minimun-scale=1, maximun-scale=1">
 	<title>ZombieCode</title>
+	<link rel="shortcut icon" type="image/png" href="zombie.ico"/>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
 	<script src="prefixfree.js"></script>
