ajax and geo files configured

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 			ZombieCode: Zombies Dev Comunity
 		</h1>
 		<figure id="avatar">
-			<img src="avatar.jpg">
 		</figure>
 	</header>
 	<nav>
@@ -42,6 +41,7 @@
 		<input type="submit" value="Agregar">
 	</form>
 	<aside>
+		<div id="geo"></div>
 		<video width="320" height="240" controls>
 		  	<source src="zombideo.webm" type="video/webm">
 		  	<source src="zombideo.ogg" type="video/iogg">
@@ -239,8 +239,11 @@
 		<p>
 			Eduardo 2014
 		</p>
+		<p id="logos"></p>
 	</footer>	
 	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="formulario.js"></script>
+	<script src="geo.js"></script>
+	<script src="ajax.js"></script>
 </body>
 </html>
