temperature forecast added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<input type="submit" value="Agregar">
 	</form>
 	<aside>
+		<div id="clima"></div>
 		<div id="geo"></div>
 		<video width="320" height="240" controls>
 		  	<source src="zombideo.webm" type="video/webm">
